--- a/templates/_base.html
+++ b/templates/_base.html
@@ -5,20 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block page_title %}{% endblock page_title %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
 </head>
 <body>
-
-
     <nav class="navbar navbar-dark bg-dark" dir="rtl">
-        <a class="navbar-brand" href="#">Book Store</a>
+        <div>
+
+            {% if user.is_authenticated %}
+                <a class="text text-light mx-4">Welcome, {{user.username}}</a>
+                <a class="btn btn-outline-danger" href="{% url 'logout' %}">Log out</a>
+                {% else %}
+                <a class="btn btn-outline-primary mx-2" href="{% url 'signup' %}">Sign Up</a>
+                <a class="btn btn-outline-success" href="{% url 'login' %}">Log In</a>
+            {% endif %}
+        </div>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Add</a>
@@ -31,9 +37,10 @@
                     Account
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <a class="dropdown-item" href="#">Login</a>
-                <a class="dropdown-item" href="#">SignUp</a>
-                <a class="dropdown-item" href="#">Logout</a>
+                    {% if user.is_authenticated %}
+                        <a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a>
+                        <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                {% endif %}
             </div>
         </li>
     </ul>
