--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,19 @@
 {% extends '_base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block page_title %}Login{% endblock page_title %}
 
 {% block content %}
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button type="submit">LogIn</button>
-    </form>
+    <div class="container py-5">
+        <div class="alert alert-primary" role="alert">
+            <h4 class="alert-heading center">Log In Page</h4>
+            <form action="" method="POST">
+                {% csrf_token %}
+                {{form | crispy}}
+                <button class="btn btn-success" type="submit">Log In</button>
+            </form>
+        </div>
+        <a class="btn btn-danger" href="{% url 'password_reset' %}">Forgot Password?</a>
+    </div>
 {% endblock content %}
