--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -2,12 +2,13 @@
 
 {% load crispy_forms_tags %}
 
-{% block page_title %}Sign Up{% endblock page_title %}
+{% block page_title %}Change Password{% endblock page_title %}
+
 
 {% block content %}
     <form action="" method="POST">
         {% csrf_token %}
         {{form | crispy}}
-        <button class="btn btn-success" type="submit">Create Account</button>
+        <button class="btn btn-success" type="submit">Done</button>
     </form>
 {% endblock content %}
