Add Book list,detail,Create,update,delete views and Templates

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -27,10 +27,10 @@
               <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Add</a>
+                <a class="nav-link" href="{% url 'book_create' %}">Add New Book</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Books</a>
+                <a class="nav-link" href="{% url 'books_list' %}">Books</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
