Add static dir and files

--- a/books/templates/books/book_create.html
+++ b/books/templates/books/book_create.html
@@ -2,7 +2,7 @@
 
 {% load crispy_forms_tags %}
 
-{% block page_title %}{% endblock page_title %}
+{% block page_title %}Create a new book{% endblock page_title %}
 
 {% block content %}
     <form action="" method="POST">
