Add pagination to Books list view

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -7,7 +7,7 @@
     <title>{% block page_title %}{% endblock page_title %}</title>
 </head>
 <body>
-    <nav class="navbar navbar-dark bg-dark" dir="rtl">
+    <nav class="navbar navbar-dark bg-dark" dir="ltr">
         <div>
 
             {% if user.is_authenticated %}
