--- a/books/templates/books/book_create.html
+++ b/books/templates/books/book_create.html
@@ -5,9 +5,30 @@
 {% block page_title %}Create a new book{% endblock page_title %}
 
 {% block content %}
-    <form action="" method="POST">
-        {% csrf_token %}
-        {{form|crispy}}
-        <button type="submit">Create</button>
-    </form>
+<div class="container mt-4" dir="ltr">
+    <div class="row">
+        <div class="col-9">
+            <div class="card shadow my-3">
+                <h5 class="card-header bg-success text-light px-5">Add a new book</h5>
+                <div class="px-5 pt-3 pb-5">
+                    <form method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                        {{form | crispy}}
+                        <button type="submit" class="btn btn-success mt-2">Save</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="col-3">
+                <div class="card my-3 shadow">
+                    <h5 class="card-header bg-warning text-light">Hint</h5>
+                    <div class="card-body">
+                        <p class="card-text">
+                            Add Book details to form and click on save button.
+                        </p>
+                    </div>
+                </div>
+        </div>
+    </div>
+</div>
 {% endblock content %}
