--- a/books/templates/books/books_list.html
+++ b/books/templates/books/books_list.html
@@ -19,7 +19,7 @@
                             <div class="d-flex flex-column justify-content-between h-100">
                                 <div class="card-body">
                                     <h3 class="card-title"><strong>{{book.title}}</strong></h3>
-                                    <p class="card-text pt-3">{{book.description | truncatewords:30}}</p>
+                                    <p class="card-text pt-3" dir="ltr">{{book.description | truncatewords:30}}</p>
                                 <p class="text-muted">Author: {{book.author}}</p>
                                 <a class="btn btn-outline-info" href="{{book.get_absolute_url}}">Show More</a>
                                 </div>
@@ -29,5 +29,26 @@
                 </div>
             {% endfor %}
         </div>
+        <nav aria-label="Page navigation example">
+            <ul class="pagination justify-content-center">
+                {% if page_obj.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{page_obj.previous_page_number}}" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                    </li>
+                {% endif %}
+                <li class="page-item"><a class="page-link" href="#">{{page_obj.number}}</a></li>
+                {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{page_obj.next_page_number}}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </li>
+                {% endif %}
+            </ul>
+        </nav>  
     </div>
 {% endblock content %}
