Add book search view

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -27,21 +27,24 @@
               <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'book_search' %}">Search</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'book_create' %}">Add New Book</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'books_list' %}">Books</a>
             </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Account
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    {% if user.is_authenticated %}
+            {% if user.is_authenticated %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Account
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a>
                         <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
-                {% endif %}
-            </div>
+                </div>
+            {% endif %}
         </li>
     </ul>
 </div>
