--- a/templates/home.html
+++ b/templates/home.html
@@ -3,5 +3,5 @@
 {% block page_title %}Home{% endblock page_title %}
 
 {% block content %}
-    <h1>Home Page</h1>
+    Home Page
 {% endblock content %}
